# log-stream-service

./: .env.example  .env.local.example  .gitignore  AGENTS.md  LICENSE  README-cursor-rules.md  README.md  RELEASING.md
.agent/: CONTEXT_INDEX.md  CONTINUITY.md  DOCS_ACCURACY_PASS.md  NEXT_SCOPE.md  README.md  SDK_RELEASE_AUDIT.md  SECURITY_REVIEW.md  SEO_GEO_PASS.md  UX_CLEANUP.md
.agent/contracts/: .gitkeep  _template.md  api-stability-quotas-auth.md  dashboard-flow-v2.md  prompt-preview-gate.md
.agent/manifests/: backend-feature.md  core-data.md  frontend-feature.md  infra.md  integration.md  planner.md  reviewer.md  router.md
.agent/summaries/: frontend-docs.md  sdk.md  security.md
.claude/agents/: backend-agent.md  frontend-agent.md  prairielog-plan-implementer.md
.claude/commands/: daily-update.md
.cursor/rules/: 000-project-context.mdc  000-vault.mdc  010-workflow-and-continuity.mdc  020-context-loading.mdc  030-verification-cost-control.mdc  100-backend-spring-openapi.mdc  110-backend-security-alerting.mdc  200-frontend-vanilla.mdc  210-frontend-security-state.mdc  220-frontend-docs-security.mdc  300-testing.mdc  400-deployment-readiness.mdc  400-sdk-release.mdc  500-documentation.mdc  alerting-mvp.mdc  (+11 more)
backend/: AGENTS.md  Dockerfile  README.md  pom.xml
frontend/: AGENTS.md  about.html  dashboard.html  demo.html  docs.html  env.js  examples.html  getting-started.html  index.html  llms.txt  privacy.html  robots.txt  sitemap.xml  styles.css
frontend/sdk/python/: README.md  prairielog_handler.py  pyproject.toml
scripts/: send-keycloak-test-logs.js
(+225 files in other folders)
